--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "start": "yarn run dev",
     "test:e2e:coverage": "nyc --reporter=html yarn run test:e2e:ci",
     "test:e2e:ci": "npx playwright test",
+    "test:e2e:update": "npx playwright test --update-snapshots -g shouldUpdateThis",
     "test:e2e:ui": "npx playwright test --ui",
     "test:e2e:headed": "npx playwright test --headed",
     "test:firefox": "karma start ./karma.conf.js --browsers Firefox",
