--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cornerstonejs/ai",
-  "version": "3.26.2",
+  "version": "4.0.0-beta.2",
   "description": "AI and ML Interfaces for Cornerstone3D",
   "files": [
     "dist"
