--- a/packages/polymorphic-segmentation/package.json
+++ b/packages/polymorphic-segmentation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cornerstonejs/polymorphic-segmentation",
-  "version": "3.26.2",
+  "version": "4.0.0-beta.2",
   "description": "Polymorphic Segmentation utility for Cornerstone3D",
   "files": [
     "dist"
