--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,10 +125,10 @@ workflows:
       - BUILD:
           requires:
             - CHECKOUT
-      # - HOLD_FOR_APPROVAL:
-      #     type: approval
-      #     requires:
-      #       - BUILD
+      - HOLD_FOR_APPROVAL:
+          type: approval
+          requires:
+            - BUILD
       - NPM_PUBLISH:
           requires:
             - BUILD
