--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -84,8 +84,7 @@
     "@kitware/vtk.js": "32.12.1",
     "comlink": "^4.4.1",
     "gl-matrix": "^3.4.3",
-    "loglevel": "^1.9.2",
-    "stats.js": "^0.17.0"
+    "loglevel": "^1.9.2"
   },
   "contributors": [
     {
