fix(security): Pin eslint-plugin-prettier and eslint-config-prettier versions.

--- a/package.json
+++ b/package.json
@@ -115,11 +115,11 @@
     "docdash": "^1.2.0",
     "dpdm": "^3.14.0",
     "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-prettier": "8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-webpack-plugin": "^4.0.1",
     "execa": "^7.2.0",
@@ -156,7 +156,7 @@
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.0",
     "postcss-preset-env": "^8.3.2",
-    "prettier": "^2.8.8",
+    "prettier": "2.8.8",
     "puppeteer": "^13.5.0",
     "resemblejs": "^5.0.0",
     "rollup": "^3.21.3",
