--- a/addOns/externals/dicom-microscopy-viewer/package.json
+++ b/addOns/externals/dicom-microscopy-viewer/package.json
@@ -9,7 +9,7 @@
     "yarn": ">=1.19.1"
   },
   "dependencies": {
-    "dicom-microscopy-viewer": "^0.46.1"
+    "dicom-microscopy-viewer": "link:dicom-microscopy-viewer"
   },
   "scripts": {
     "build": "echo addOns externals dependency"
