--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "dbaeumer.vscode-eslint", "PolyMeilex.wgsl"]
+  "recommendations": ["esbenp.prettier-vscode","PolyMeilex.wgsl", "oxc.oxc-vscode"]
 }
