--- a/package.json
+++ b/package.json
@@ -56,12 +56,11 @@
     "test:unit": "jest --collectCoverage",
     "test:debug": "karma start ./karma.conf.js --browsers Chrome --no-single-run",
     "lint-staged": "lint-staged",
-    "lint": "eslint --quiet -c .eslintrc.json packages/**/src",
+    "lint": "oxlint packages/**/src",
     "webpack:watch": "npx lerna run webpack:watch"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-external-helpers": "^7.18.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
@@ -91,8 +90,6 @@
     "@types/node": "^20.14.8",
     "@types/react": "^17.0.58",
     "@types/react-dom": "^17.0.20",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
     "@webgpu/types": "^0.1.40",
     "acorn": "^8.8.2",
     "acorn-jsx": "^5.3.2",
@@ -114,14 +111,7 @@
     "cssnano": "^6.0.1",
     "docdash": "^1.2.0",
     "dpdm": "^3.14.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "eslint-webpack-plugin": "^4.0.1",
+    "oxlint": "^1.9.0",
     "execa": "^7.2.0",
     "exports-loader": "^3.0.0",
     "file-loader": "^6.2.0",
@@ -184,7 +174,7 @@
   },
   "lint-staged": {
     "packages/**/*.{ts,js,jsx,tsx,json,md,css}": [
-      "eslint --fix",
+      "oxlint",
       "prettier --write"
     ]
   },
