--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "plugins": ["@prettier/plugin-oxc"]
 }
