--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["esbenp.prettier-vscode","PolyMeilex.wgsl", "oxc.oxc-vscode"]
+  "recommendations": [
+    "esbenp.prettier-vscode",
+    "PolyMeilex.wgsl",
+    "oxc.oxc-vscode"
+  ]
 }
