--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -65,11 +65,10 @@
         "clean:deep": "yarn run clean && shx rm -rf node_modules",
         "dev": "rollup --watch  -c rollup.config.mjs",
         "build:all": "yarn build",
-        "format-check": "npx eslint ./src --quiet",
         "api-check": "echo 'No API check for this package'",
         "start": "rollup --watch -c rollup.config.mjs",
         "format": "prettier --write 'src/**/*.js' 'test/**/*.js'",
-        "lint": "eslint --fix .",
+        "lint": "oxlint .",
         "prebuild": "node ../../scripts/generate-version.js ./"
     },
     "repository": {
