--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,8 +76,8 @@
     "build": "yarn run build:esm",
     "build:all": "yarn run build:esm",
     "dev": "tsc --project ./tsconfig.json --watch",
-    "format-check": "npx eslint ./src --quiet",
     "api-check": "api-extractor --debug run ",
+    "lint": "oxlint .",
     "prepublishOnly": "yarn run build"
   },
   "dependencies": {
