--- a/packages/polymorphic-segmentation/package.json
+++ b/packages/polymorphic-segmentation/package.json
@@ -35,8 +35,7 @@
     "build:all": "yarn run build:esm",
     "start": "tsc --project ./tsconfig.json --watch",
     "format": "prettier --write 'src/**/*.js' 'test/**/*.js'",
-    "lint": "eslint --fix .",
-    "format-check": "npx eslint ./src --quiet",
+    "lint": "oxlint .",
     "api-check": "api-extractor --debug run ",
     "prepublishOnly": "yarn clean && yarn build"
   },
