--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "test:unit": "jest --collectCoverage",
     "test:debug": "karma start ./karma.conf.js --browsers Chrome --no-single-run",
     "lint-staged": "lint-staged",
-    "lint": "oxlint packages/**/src",
+    "lint": "oxlint packages/**/src --quiet",
     "webpack:watch": "npx lerna run webpack:watch"
   },
   "devDependencies": {
