--- a/packages/dicomImageLoader/package.json
+++ b/packages/dicomImageLoader/package.json
@@ -74,7 +74,6 @@
     "copy-dts": "echo 'not implemented yet'",
     "clean": "shx rm -rf dist",
     "clean:deep": "yarn run clean && shx rm -rf node_modules",
-    "format-check": "npx eslint ./src --quiet",
     "api-check": "api-extractor --debug run ",
     "cm": "npx git-cz",
     "clean:dist": "shx rm -rf dist",
@@ -83,10 +82,7 @@
     "doc": "npm run doc:generate && opn documentation/index.html",
     "doc:generate": "npm run clean:docs && jsdoc -c .jsdocrc",
     "dev": "tsc --project ./tsconfig.json --watch",
-    "eslint": "eslint -c .eslintrc.js src",
-    "eslint-quiet": "eslint -c .eslintrc.js --quiet src",
-    "eslint-fix": "eslint -c .eslintrc.js --fix src",
-    "eslint-fix-test": "eslint -c .eslintrc.js --fix test",
+    "lint": "oxlint .",
     "start": "npm run webpack:dev",
     "start:dev": "webpack-dev-server --config .webpack/webpack-dev",
     "test": "npm run test:chrome",
@@ -118,13 +114,6 @@
   "peerDependencies": {
     "@cornerstonejs/core": "^3.32.5",
     "dicom-parser": "^1.8.9"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ]
   },
   "config": {
     "commitizen": {
