--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -33,10 +33,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Build dependencies
-        run: bun run build:esm
+      - name: Run lint
+        run: bun run lint
 
       - name: Run format check
-        run: bun run lint
-        env:
-          NODE_OPTIONS: --max_old_space_size=32896
+        run: bun run format-check
