--- a/.github/workflows/docusaurus-build.yml
+++ b/.github/workflows/docusaurus-build.yml
@@ -36,7 +36,10 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Build packages in ESM format
-        run: bun run build:esm
+        run: yarn build:esm
+        env:
+          NX_CACHE_DIRECTORY: ${{ runner.temp }}/nx-cache
+          NX_DAEMON: false
 
       - name: Install docs dependencies
         run: cd packages/docs && bun install
