--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -7,6 +7,7 @@
     "preinstall": "node preinstall.js",
     "build": "echo 'build'",
     "build:docs": "cd ../../ && yarn install && yarn run build:esm && cd packages/docs && cross-env NODE_OPTIONS=--max_old_space_size=32384 yarn run prep-examples && docusaurus build && node ./scripts/prepare-markdown-files.js && node ./scripts/generate-llms-txt.js && node ./scripts/generate-llms-full-txt.js && node ./scripts/generate-redirects.js",
+    "build:ci": "cross-env NODE_OPTIONS=--max_old_space_size=32384 yarn run prep-examples && docusaurus build && node ./scripts/prepare-markdown-files.js && node ./scripts/generate-llms-txt.js && node ./scripts/generate-llms-full-txt.js && node ./scripts/generate-redirects.js",
     "prepare-markdown-files": "node ./scripts/prepare-markdown-files.js",
     "generate-llms-txt": "node ./scripts/generate-llms-txt.js",
     "generate-llms-full-txt": "node ./scripts/generate-llms-full-txt.js",
