--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,6 +1,10 @@
 {
   "plugins": ["typescript", "import"],
-  "ignorePatterns": ["utils/**", "**/examples/**", "packages/dicomImageLoader/src/types/codec*"],
+  "ignorePatterns": [
+    "utils/**",
+    "**/examples/**",
+    "packages/dicomImageLoader/src/types/codec*"
+  ],
   "rules": {
     "typescript/no-explicit-any": "error",
     "import/no-cycle": "error"
