--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "webpack:watch": "npx lerna run webpack:watch"
   },
   "devDependencies": {
-    "@prettier/plugin-oxc": "^0.0.4",
     "@babel/core": "^7.21.8",
     "@babel/plugin-external-helpers": "^7.18.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -78,6 +77,7 @@
     "@microsoft/api-extractor": "7.49.2",
     "@microsoft/tsdoc": "^0.15.0",
     "@playwright/test": "^1.51.1",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -111,9 +111,9 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.1",
+    "dicomweb-client": "^0.11.2",
     "docdash": "^1.2.0",
     "dpdm": "^3.14.0",
-    "oxlint": "^1.9.0",
     "execa": "^7.2.0",
     "exports-loader": "^3.0.0",
     "file-loader": "^6.2.0",
@@ -142,6 +142,7 @@
     "netlify-cli": "^17.34.1",
     "nyc": "^17.1.0",
     "open-cli": "^7.0.1",
+    "oxlint": "^1.9.0",
     "path-browserify": "^1.0.1",
     "playwright-test-coverage": "^1.2.12",
     "postcss": "^8.4.23",
@@ -187,7 +188,9 @@
     "not op_mini all"
   ],
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
-  "dependencies": {},
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001734"
+  },
   "resolutions": {
     "canvas": "3.1.0"
   }
