--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
   pull_request:
-    branches: [main, master]
+    branches: [main, master, beta]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
