Updates test assertions after camera FOV change
Updates the expected values in CircleROIStartEnd and CobbAngleTool tests to reflect the change in camera FOV, ensuring the tests remain accurate.

Removes and re-adds ground truth images.
Adds a test script that runs unit tests without coverage reports.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "test:unit:ci": "yarn test:unit && yarn test:ci",
     "test": "karma start",
     "test:unit": "jest --collectCoverage",
+    "test:unit:no-coverage": "jest",
     "test:debug": "karma start ./karma.conf.js --browsers Chrome --no-single-run",
     "lint-staged": "lint-staged",
     "lint": "oxlint packages/**/src --quiet",
