not release no beta

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ workflows:
             branches:
               only:
                 - main
-                - beta
+                # - beta
       - BUILD:
           requires:
             - CHECKOUT
