fix(security): Use exact versioning in package.json. (#2323)

--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -51,17 +51,17 @@
   },
   "homepage": "https://github.com/cornerstonejs/cornerstone3D/blob/main/packages/ai/README.md",
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.17.8",
-    "buffer": "^6.0.3",
-    "dcmjs": "^0.43.1",
-    "gl-matrix": "^3.4.3",
-    "lodash.clonedeep": "^4.5.0",
-    "ndarray": "^1.0.19",
+    "@babel/runtime-corejs2": "7.26.10",
+    "buffer": "6.0.3",
+    "dcmjs": "0.43.1",
+    "gl-matrix": "3.4.3",
+    "lodash.clonedeep": "4.5.0",
+    "ndarray": "1.0.19",
     "onnxruntime-common": "1.17.1",
     "onnxruntime-web": "1.17.1"
   },
   "peerDependencies": {
-    "@cornerstonejs/core": "^4.3.1",
-    "@cornerstonejs/tools": "^4.3.1"
+    "@cornerstonejs/core": "4.3.1",
+    "@cornerstonejs/tools": "4.3.1"
   }
 }
