--- a/packages/polymorphic-segmentation/package.json
+++ b/packages/polymorphic-segmentation/package.json
@@ -53,8 +53,8 @@
     "@icr/polyseg-wasm": "0.4.0"
   },
   "peerDependencies": {
-    "@cornerstonejs/core": "^4.3.1",
-    "@cornerstonejs/tools": "^4.3.1",
+    "@cornerstonejs/core": "4.3.1",
+    "@cornerstonejs/tools": "4.3.1",
     "@kitware/vtk.js": "32.12.1"
   }
 }
