--- a/addOns/externals/dicom-microscopy-viewer/package.json
+++ b/addOns/externals/dicom-microscopy-viewer/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "engines": {
     "node": ">=20",
-    "yarn": ">=1.19.1"
+    "npm": ">=10.0.0"
   },
   "dependencies": {
     "dicom-microscopy-viewer": "0.48.6"
