--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          bun-version: 1.2.23
 
       - name: Install dependencies
         run: bun install
