--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "docs": "npx lerna run docs",
     "docs:watch": "npx lerna run docs:watch",
     "install:update-lockfile": "yarn install && bun install --config=./bunfig.update-lockfile.toml",
-    "install:yarn:frozen-lockfile": "yarn install --frozen-lockfile",
+    "install:yarn:frozen-lockfile": "echo Deprecated in favor of install:frozen && yarn install:frozen",
     "install:frozen": "yarn install --frozen-lockfile",
     "audit": "yarn audit || bun audit",
     "preinstall": "node preinstall.js",
