--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
   "resolutions": {
     "axios": "1.12.0",
     "canvas": "3.2.0",
+    "glob": "10.5.0",
     "tar-fs": "2.1.4",
     "body-parser": "1.20.3",
     "ws": "8.18.3"
