--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "canvas": "3.2.0",
     "tar-fs": "2.1.4",
     "body-parser": "1.20.3",
-    "ws": "8.18.3"
+    "ws": "8.18.3",
+    "glob": "11.1.0"
   }
 }
