--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "cssnano": "6.1.2",
     "dicomweb-client": "0.11.2",
     "docdash": "1.2.0",
+    "dpdm": "3.14.0",
     "execa": "7.2.0",
     "exports-loader": "3.1.0",
     "file-loader": "6.2.0",
@@ -136,7 +137,7 @@
     "karma-mocha": "2.0.1",
     "karma-spec-reporter": "0.0.36",
     "karma-webpack": "5.0.1",
-    "lerna": "9.0.1",
+    "lerna": "8.2.1",
     "lint-staged": "13.3.0",
     "lodash": "4.17.21",
     "mocha": "10.8.2",
