--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "docs:watch": "npx lerna run docs:watch",
     "install:update-lockfile": "yarn install && bun install --config=./bunfig.update-lockfile.toml",
     "install:yarn:frozen-lockfile": "yarn install --frozen-lockfile",
-    "audit": "yarn audit || bun audit",
+    "audit": "bun audit --ignore=GHSA-5j98-mcp5-4vw2",
     "preinstall": "node preinstall.js",
     "prepare": "husky",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
