--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
   },
   "resolutions": {
     "axios": "1.12.0",
+    "buffer": "6.0.3",
     "canvas": "3.2.0",
     "dcmjs": "0.45.0",
     "tar-fs": "2.1.4",
