--- a/package.json
+++ b/package.json
@@ -195,7 +195,9 @@
   },
   "resolutions": {
     "axios": "1.12.0",
+    "buffer": "6.0.3",
     "canvas": "3.2.0",
+    "dcmjs": "0.45.0",
     "tar-fs": "2.1.4",
     "body-parser": "1.20.3",
     "ws": "8.18.3"
