--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
   "resolutions": {
     "axios": "1.12.0",
     "buffer": "6.0.3",
+    "node-forge": "1.3.2",
     "canvas": "3.2.0",
     "dcmjs": "0.45.0",
     "tar-fs": "2.1.4",
