--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -96,6 +96,7 @@
   "resolutions": {
     "node-forge": "1.3.2",
     "qs": "6.14.1",
+    "dcmjs": "0.49.4",
     "mdast-util-to-hast": "13.2.1"
   }
 }
