--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,6 +21,7 @@
     "docs:ci": "cross-env NODE_OPTIONS=--max_old_space_size=16384 && yarn run build:docs",
     "docs:ci-no-tests": "cross-env NODE_OPTIONS=--max_old_space_size=16384 && yarn run prep-no-tests && yarn run build:docs",
     "dev:watch": "cross-env NODE_OPTIONS=--max_old_space_size=16384 TYPEDOC_WATCH=true docusaurus start",
+    "install:update-lockfile": "yarn install && bun install",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clean": "rm -rf node_modules/.cache/storybook && shx rm -rf dist && yarn run clear",
@@ -53,7 +54,6 @@
     "@svgr/webpack": "8.1.0",
     "clsx": "1.1.1",
     "cross-env": "7.0.3",
-    "dcmjs": "0.48.0",
     "dicom-parser": "1.8.21",
     "dicomweb-client": "0.10.4",
     "docusaurus-plugin-copy": "0.1.1",
@@ -95,6 +95,7 @@
   "resolutions": {
     "node-forge": "1.3.2",
     "qs": "6.14.1",
+    "dcmjs": "0.49.4",
     "mdast-util-to-hast": "13.2.1"
   }
 }
